[update][xs]: Change from GDx->NHS

--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -1,7 +1,7 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta } from "@storybook/addon-docs/blocks";
 
 <Meta title="Example/Introduction" />
 
-# Datapub-gdx
+# Datapub-nhs
 
-GDx data publishing app in React using DataPub.js framework.
+NHS data publishing app in React using DataPub.js framework.
